--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,6 +1,6 @@
 site_name: Documentação - Modelo Agrometeorológico Espectral
 nav:
-    - Introdução: index.md
+    - Apresentação: index.md
     - Modelo de penalização: modelo.md
     - Dados: dados.md
     - Análises: analises.md
